--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "@google/genai": "^1.10.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
-    "react-image-crop": "^11.0.6"
+    "react-image-crop": "^11.0.6",
+    "@google/genai": "^1.12.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
