--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myquran-journal(public-base-model)",
+  "name": "myquran-journal(public-base-model-bm)",
   "private": true,
   "version": "0.0.0",
   "type": "module",
